<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Olá Mundo, aDesp!</string>
    <string name="app_name">aDesp</string>
    <string name="app_nome">aDesp v3.5</string>
    <string name="btnFecharUpper">FECHAR</string>
    <string name="app_sobre">Todos os direitos reservados!\nClaudio Monteoliva\nclmonteoliva@gmail.com\n\nhttp://adesp-android.blogspot.com</string>
    <string name="txtTotalPago">Total Pago:   R$  </string>
    <string name="txtTotal">Saldo:   R$  </string>
    <string name="txtCurrency"> - R$ </string>
    <string name="labelCampo1">Descrição da Despesa:</string>
    <string name="labelCampo2">Valor R$:</string>
    <string name="labelCampo3">Dia Vencimento:</string>
    <string name="labelCampo4">Despesa paga ?</string>
    <string name="labelNao">Não</string>
    <string name="labelSim">Sim</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnGravar">Gravar</string>
    <string name="btnExcluir">Excluir Despesa</string>
    <string name="txtHintCampo1">Digite a despesa</string>
    <string name="labelCampo5">Valor da Receita do Mês R$:</string>
    <string name="txtSaldo">Balanço:  R$</string>
    <string name="txtReceita">Receita(s):  R$</string>
    <string name="txtExcluir">Confirma a exclusão desta Despesa ?</string>
    <string name="txtMenuPri01">Novo</string>
    <string name="txtMenuPri02">Receita</string>
    <string name="txtMenuPri03">Mês Anterior</string>
    <string name="txtMenuPri04">Próximo Mês</string>
    <string name="txtMenuPri05">Sobre</string>
    <string name="btnEditar">Editar</string>
    <string name="txtErrorMsg01">O Valor deve ser informado!</string>
    <string name="txtMenuPri06">Sair</string>
    <string name="labelCampo6">Descrição da Categoria:</string>
    <string name="txtHintCampo2">Digite a categoria</string>
    <string name="txtTitulo2">Editar Categoria</string>
    <string name="txtTitulo1">Nova Categoria</string>
    <string name="txtExcluirCategoria">Confirma a exclusão desta Categoria ?</string>
    <string name="btnExcluirCateg">Excluir Categoria</string>
    <string name="labelCampo7">Categoria:</string>
    <string name="labelCampo8">Combo Categoria</string>
    <string name="txtDialogo">Aguarde...</string>
    <string name="txtTituloCombo">Todas</string>
    <string name="labelCampo9">Repetir nos próximos meses:</string>
    <string name="txtExcluirReceita">Confirma a exclusão desta Receita ?</string>
    <string name="labelCampo10">Tipo da Categoria:</string>
    <string name="labelDespesa">Despesa</string>
    <string name="labelReceita">Receita</string>
    <string name="txtHintCampo3">Digite a receita</string>
    <string name="labelCampo11">Descrição da Receita:</string>
    <string name="txtSair">Tem certeza que quer sair da aplicação?</string>
    <string name="txtNao">Não</string>
    <string name="txtSim">Sim</string>
    <string name="ToolBar1">Despesas</string>
    <string name="ToolBar2">Hoje</string>
    <string name="ToolBar5">Resumo</string>
    <string name="ToolBar6">Resumo Anual</string>
    <string name="ToolBar3">Receitas</string>
    <string name="ToolBar4">Categorias</string>
    <string name="txtTitulo3">Editar Despesa</string>
    <string name="txtTitulo4">Editar Receita</string>
    <string name="txtTitulo5">Excluir Receita</string>
    <string name="txtInicio">Aguarde o carregamento da Aplicação!</string>
    <string name="txtTitulo6">Pagar Despesa</string>
    <string name="txtTitulo8">Selecione</string>
    <string name="txtTitulo7">Todos</string>
    <string name="txtResumo1">Receita: R$</string>
    <string name="txtResumo2">Despesa(s) à Pagar: R$</string>
    <string name="txtResumo3">Depesa(s) Paga(s): R$</string>
    <string name="txtResumo4">Balanço - Projeção R$</string>
    <string name="txtResumo5">Balanço - Real R$</string>
    <string name="txtMenuPri07">Backup dos dados</string>
    <string name="txtMenuPri08">Senha de acesso</string>
    <string name="txtConfig">aDesp v3.5 - Configuração</string>
    <string name="txtVoltar">Voltar</string>
    <string name="txtSenhaNao">Não definida</string>
    <string name="txtSenhaSim">Definida</string>
    <string name="txtMenuPri09">Restaura dados</string>
    <string name="txtSenha">aDesp v3.5 - Senha de Acesso</string>
    <string name="labelCampo12">Senha:</string>
    <string name="txtHintCampo4">Digite a senha de acesso</string>
    <string name="btnEntrar">Entrar</string>
    <string name="labelCampo13">Gravar senha</string>
    <string name="txtSenhaIncorreta">Senha Incorreta!</string>
    <string name="txtDialogBkp">Fazendo backup dos dados...</string>
    <string name="txtBkpOK">Backup realizado com sucesso!</string>
</resources>
