<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
	android:layout_height="fill_parent" 
	android:background="@drawable/bg_android" 
	android:orientation="vertical"
	android:gravity="center" 
	android:layout_width="300dip">

<TextView 
    android:id="@+id/TextView01" 
    android:layout_height="wrap_content"
	android:textColor="#fff" 
	android:textStyle="bold"
	android:layout_width="wrap_content" 
	android:text="@string/app_name"></TextView>

<TextView 
    android:id="@+id/TextView02" 
    android:layout_height="wrap_content"
	android:textColor="#fff" 
	android:layout_width="fill_parent"
	android:layout_margin="7dip" 
	android:text="@string/app_sobre"
	android:gravity="center"></TextView>

<Button 
    android:layout_width="280dip"
	android:layout_height="wrap_content" 
	android:text="@string/btnFecharUpper" 
	android:layout_margin="4dip" 
	android:id="@+id/OkButton"></Button>

</LinearLayout>