<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:orientation="vertical"
   android:background="@color/cinza_claro"
   android:padding="2dp">

   <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center"
      android:background="@color/cinza_escuro"
      android:layout_weight="1"
      android:padding="6dp">
         <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/labelCampo12"
            android:textSize="16sp"
            android:shadowColor="#888"
            android:shadowRadius="2"  
            android:shadowDx="1"  
            android:shadowDy="1" />
         <EditText
            android:id="@+id/senha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/txtHintCampo4"
            android:imeOptions="actionDone" />
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">
            <Button
               android:id="@+id/btnCancelar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:drawableLeft="@android:drawable/ic_menu_revert"
               android:text="@string/btnCancelar" />
            <Button
               android:id="@+id/btnEntrar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:drawableLeft="@android:drawable/ic_menu_save"
               android:text="@string/btnGravar" />
         </LinearLayout>
   </LinearLayout>

</LinearLayout>