<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@drawable/fundo">

<!-- titulo do aplicativo -->
<TextView
   android:id="@+id/titBarra" 
   android:layout_width="fill_parent" 
   android:layout_height="wrap_content"
   android:background="@drawable/barra"
   android:textSize="16sp"
   android:textColor="#FFFFFF"
   android:gravity="center"
   android:text="@string/app_nome"
   android:shadowColor="#DDD"
   android:shadowRadius="2"  
   android:shadowDx="1"  
   android:shadowDy="1" />

<TableLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:stretchColumns="1">
  <TableRow android:padding="2dp">
     <TextView
       android:layout_width="wrap_content" 
       android:layout_height="fill_parent"
       android:textColor="#FFFFFF"
       android:textStyle="bold"
       android:gravity="center_vertical"
       android:paddingRight="8dp"
       android:text="@string/labelCampo7"
       android:textSize="14sp"
       android:shadowColor="#000"
       android:shadowRadius="2"  
       android:shadowDx="1"  
       android:shadowDy="1" />
     <Spinner
       android:id="@+id/comboCategoria"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:drawSelectorOnTop="true"
       android:prompt="@string/labelCampo8" />
     <ImageButton
       android:id="@+id/btnPesq"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/pesquisa"
       android:layout_gravity="right" />
  </TableRow>
</TableLayout>

<ListView
  android:id="@+id/ListView01" 
  android:cacheColorHint="#00000000"
  android:layout_width="fill_parent" 
  android:layout_height="wrap_content"
  android:layout_weight="1" />

<!-- barra de opcoes -->
<br.com.monteoliva.biblioteca.BarraOpcoes 
  android:layout_width="fill_parent"
  android:layout_height="wrap_content" />

</LinearLayout>